Update and rename main page.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review Form</title>
+    <title>Dynamic Form</title>
     <link rel="stylesheet" href="form 1.html">
     <link rel="stylesheet" href="form 2.html">
     <link rel="stylesheet" href="form 3.html">
